Structural improvements, starting MockGals
Lots of additions and structural improvements were made (generalized
below). Also the files for starting work on MockGals were included in
the history, its argument parsing and configuration file reading parts
are now ready.

 - The "default files" were changed to "configuration files" in all
   the source code and documentation. The `.def` suffix was changed to
   `.conf` and the variable, function and file names were also
   changed. Also the directory of the user and system configuration
   files was changed to `$HOME/.local/etc` and `prefix/etc`. Since all
   the configuration files begin with `astr`, they will be clearly
   separated from any other possibly existing configuration file.

 - The readconfig function in ui.c was also changed. I wrote a line
   parser my self instead of using strtok, because I needed to include
   quotes for some variables and manging those with strtok was not
   easy with all the subsequent tests on its values. But now, it works
   nicely and is easy to understand.

 - Since equations started showing up in the MockGals explanation, I
   added the `doc/formath.texi` macros to print the equations
   correctly in TeX and in HTML (to use MathJax) and other formats.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,10 +12,13 @@
 
 ## Directories to check:
 ## =====================
+if COND_MOCKGALS
+  MAYBE_MOCKGALS = src/mockgals
+endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
-SUBDIRS = lib $(MAYBE_IMGCROP) doc tests
+SUBDIRS = lib $(MAYBE_MOCKGALS) $(MAYBE_IMGCROP) doc tests
 
 
 
@@ -52,7 +55,7 @@ dist_doc_DATA = README
 ##   makerandomcat.py.
 EXTRA_DIST = include/arraymanip.h include/astrthreads.h			\
  include/checkset.h include/commonargs.h include/commonparams.h		\
- include/defaults.h include/fitsarrayvv.h include/fixedstringmacros.h	\
+ include/configfiles.h include/fitsarrayvv.h include/fixedstringmacros.h	\
  include/linkedlist.h include/stats.h include/timing.h			\
  include/txtarrayvv.h doc/findversions.sh				\
  tests/imgcrop/makerandomcat.py tests/imgcrop/randcat.txt		\
