--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 Makefile
 
 astrimgcrop
+astrmockgals
 
 .deps
 ar-lib
@@ -25,6 +26,7 @@ config.h
 stamp-h1
 .dirstamp
 configure
+runtest.sh
 install-sh
 aclocal.m4
 .astrutils
