MockGals changed to MakeProfiles, some corrections
 - What was supposed to be MockGals before will now be broken up into
   three separate programs: one to make mock profiles (galaxies and
   the PSF), one to convolve the image and one to add noise. Each of
   these program can be used in various circumstances, not just what I
   had in mind for MockGals. For example, when making the profiles
   separately, we can use them for fitting. Convolution or adding
   noise can also be used in other contexts too. A simple shell script
   can be used to unify any desired way to mix these.

 - For synchronizing threads, I used a combination of a mutex and a
   conditional variable! I learnt recently that using barriers in
   pthread is much more easier! So I converted all parallel operations
   to use this framework from now on.

 - In converting a text table to a C array, I would replace a
   non-number with the smallest possible double value (type of the
   array). Now it will use NaN instead.

 - Added a function in fitsarrayvv.c to convert the input type to any
   output type depending on the input and desired BITPIX. With this
   function, the conversion functions in arraymanip are no longer
   needed.

 - Changed Copyright years to 2013-2015 with the command:

       find ./astrutils/ -name *.[ch] | \
       parallel sed s/2013-2014/2013-2015/ {} -i

 - Updated the documentation and the build process for the new names.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,13 +12,13 @@
 
 ## Directories to check:
 ## =====================
-if COND_MOCKGALS
-  MAYBE_MOCKGALS = src/mockgals
+if COND_MKPROF
+  MAYBE_MKPROF = src/mkprof
 endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
-SUBDIRS = lib $(MAYBE_MOCKGALS) $(MAYBE_IMGCROP) doc tests
+SUBDIRS = lib $(MAYBE_MKPROF) $(MAYBE_IMGCROP) doc tests
 
 
 
@@ -53,10 +53,7 @@ dist_doc_DATA = README
 ##
 ## tests/imgcrop/randcat.txt: The random catalog that was created by
 ##   makerandomcat.py.
-EXTRA_DIST = include/arraymanip.h include/astrthreads.h			\
- include/checkset.h include/commonargs.h include/commonparams.h		\
- include/configfiles.h include/fitsarrayvv.h include/fixedstringmacros.h	\
- include/linkedlist.h include/stats.h include/timing.h			\
- include/txtarrayvv.h doc/findversions.sh				\
- tests/imgcrop/makerandomcat.py tests/imgcrop/randcat.txt		\
+EXTRA_DIST = include/commonargs.h include/commonparams.h	\
+ include/fixedstringmacros.h doc/findversions.sh		\
+ tests/imgcrop/makerandomcat.py tests/imgcrop/randcat.txt	\
  tests/basicchecks.sh
