--- a/src/mkprof/astrmkprof.conf
+++ b/src/mkprof/astrmkprof.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for MockGals.
-# Image Crop is part of GNU Astronomy Utitlies.
+# Default parameters (System) for MakeProfiles.
+# MakeProfiles is part of GNU Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
 # a value. The name and value should be separated by
@@ -26,15 +26,17 @@
  zeropoint         30.00
 
 # Catalog:
- fcol                  1
- xcol                  2
- ycol                  3
+ xcol                  1
+ ycol                  2
+ fcol                  3
  rcol                  4
  ncol                  5
  pcol                  6
  qcol                  7
  mcol                  8
+ tcol                  9
 
 # Output:
  naxis1             1000
  naxis2             1000
+ oversample            5
