MakeProfiles parallel structure started
The main change now is that the parallel working structure of
MakeProfiles is now ready. The options are now much closer to the
final status. The `build` and `write` functions just have to be
updated now. There were also lots of additions/corrections to the
manual.

--- a/src/mkprof/astrmkprof.conf
+++ b/src/mkprof/astrmkprof.conf
@@ -12,18 +12,13 @@
 # NOTE I:  All counting is from zero, not one.
 # NOTE II: Lines starting with `#` are ignored.
 
-# PSF:
- hdu                   0
- psffunction      moffat
- fwhm               3.00
- moffatbeta        4.765
- psftrunc           5.00
-
-# Input profiles:
- truncation        10.00
+# Profiles:
+ tunitinp              0
  tolerance          0.01
- background      5000.00
  zeropoint         30.00
+ prepforconv           1
+ xshift                0
+ yshift                0
 
 # Catalog:
  xcol                  1
@@ -37,6 +32,7 @@
  tcol                  9
 
 # Output:
+ output               ./
  naxis1             1000
  naxis2             1000
  oversample            5
