Progress on MakeProfiles, not yet finished
Some great progress has been made on MakeProfiles: the profiles are
now built accurately with the oversampling and they can be
individually saved. But the final steps are still remaining.

Another major addition is that the `--cite` option was added for all
the programs (in `commonargs.h`).

--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -30,10 +30,10 @@ AM_LDFLAGS = -lcfitsio -lwcs -pthread -lm -L$(top_builddir)/lib
 bin_PROGRAMS = astrimgcrop
 
 astrimgcrop_SOURCES = main.c main.h ui.c ui.h args.h imgcrop.c	\
-imgcrop.h wcsmode.c wcsmode.h crop.c crop.h
+imgcrop.h wcsmode.c wcsmode.h crop.c crop.h cite.h
 
 astrimgcrop_LDADD = -lconfigfiles -lfitsarrayvv -ltxtarrayvv	\
--lcheckset -llinkedlist -ltiming -lastrthreads
+-lcheckset -llinkedlist -ltiming -lastrthreads -lbox
 
 
 
