--- a/src/mkprof/astrmkprof.conf
+++ b/src/mkprof/astrmkprof.conf
@@ -14,6 +14,7 @@
 
 # Profiles:
  tunitinp              0
+ numrandom         10000
  tolerance          0.01
  zeropoint         30.00
  prepforconv           1
