WCS capability added to MakeProfiles
With the WCS header keywords that are now included in all the outputs
of MakeProfiles, it is now very easy to later merge all the
individually created profile to one.

--- a/src/mkprof/astrmkprof.conf
+++ b/src/mkprof/astrmkprof.conf
@@ -12,12 +12,18 @@
 # NOTE I:  All counting is from zero, not one.
 # NOTE II: Lines starting with `#` are ignored.
 
+# Output:
+ output               ./
+ naxis1             1000
+ naxis2             1000
+ oversample            5
+
 # Profiles:
  tunitinp              0
  numrandom         10000
  tolerance          0.01
  zeropoint         30.00
- prepforconv           1
+ prepforconv           0
  xshift                0
  yshift                0
 
@@ -32,8 +38,9 @@
  mcol                  8
  tcol                  9
 
-# Output:
- output               ./
- naxis1             1000
- naxis2             1000
- oversample            5
+# WCS:
+ crpix1                1
+ crpix2                1
+ crval1                1
+ crval2                1
+ resolution         0.03
