License added for files missing one.
The non-C files were mostly lacking a license! Now they all have one.

I also wrote a separate script to bring in all the configuration files
into a `.astrutils` directory for all the tests once instead of
checking (and bringing them) in each test.

--- a/configure.ac
+++ b/configure.ac
@@ -2,13 +2,22 @@
 #
 # Hand written file: used as input into GNU Autotools (autoconf).
 #
-# This is the autoconf instructions to build NoiseChisel. NoiseChisel
-# is a program to detect and segment objects heavily immersed in
-# noise. It is free software released under GNU GPLv3+.
-#
-# Copyright (C) 2014 Mohammad Akhlaghi
+# Copyright (C) 2013-2015 Mohammad Akhlaghi
 # Tohoku University Astronomical Institute, Sendai, Japan.
 # http://astr.tohoku.ac.jp/~akhlaghi/
+#
+# AstrUtils is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the
+# Free Software Foundation, either version 3 of the License, or (at your
+# option) any later version.
+#
+# AstrUtils is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with AstrUtils. If not, see <http://www.gnu.org/licenses/>.
 
 # Definitions:
 AC_PREREQ([2.69])
