--- a/src/imgcrop/astrimgcrop.conf
+++ b/src/imgcrop/astrimgcrop.conf
@@ -11,6 +11,11 @@
 #
 # NOTE I:  All counting is from zero, not one.
 # NOTE II: Lines starting with `#` are ignored.
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.  This file is offered as-is,
+# without any warranty.
 
 # Operating mode:
  imgmode        0
