--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -2,14 +2,26 @@
 ##
 ## Hand written file: used as input into Autotools.
 ##
-## NOTE:
 ## This file will be called by the Makefile.am in the top directory,
 ## so this file does not need to be called directly by automake to
 ## make the full GNU Astronomy Utilities (Astrutils)
 ##
-## Copyright (C) 2013-2014 Mohammad Akhlaghi
+## Copyright (C) 2013-2015 Mohammad Akhlaghi
 ## Tohoku University Astronomical Institute, Sendai, Japan.
 ## http://astr.tohoku.ac.jp/~akhlaghi/
+##
+## AstrUtils is free software: you can redistribute it and/or modify it
+## under the terms of the GNU General Public License as published by the
+## Free Software Foundation, either version 3 of the License, or (at your
+## option) any later version.
+##
+## AstrUtils is distributed in the hope that it will be useful, but
+## WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+## General Public License for more details.
+##
+## You should have received a copy of the GNU General Public License
+## along with AstrUtils. If not, see <http://www.gnu.org/licenses/>.
 
 
 
