AstrUtils changed to gnuastro and astr prefix to ast
AstrUtils was not a good project identifier, so after a discussion
with the GNU software evaluation team, it was changed to gnuastro. The
copyright notice in all the files and the manual had to be changed.

Also the prefix `astr` that was added to all the executables was
changed to `ast`.

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 *.tar.gz
 Makefile
 
-astrmkprof
-astrimgcrop
+astmkprof
+astimgcrop
 
 .deps
 ar-lib
@@ -29,11 +29,11 @@ configure
 runtest.sh
 install-sh
 aclocal.m4
-.astrutils
+.gnuastro
 test-driver
 config.h.in
 doc/mdate-sh
-astrutils.t2p
+gnuastro.t2p
 config.status
 doc/stamp-vti
 autom4te.cache
