--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -1,27 +1,24 @@
 ## Process this file with automake to produce Makefile.inx
 ##
-## Hand written file: used as input into Autotools.
-##
-## This file will be called by the Makefile.am in the top directory,
-## so this file does not need to be called directly by automake to
-## make the full GNU Astronomy Utilities (Astrutils)
+## This is part of GNU Astronomy Utilities (gnuastro). It will be
+## called by the Makefile.am in the top directory.
 ##
 ## Copyright (C) 2013-2015 Mohammad Akhlaghi
 ## Tohoku University Astronomical Institute, Sendai, Japan.
 ## http://astr.tohoku.ac.jp/~akhlaghi/
 ##
-## AstrUtils is free software: you can redistribute it and/or modify it
-## under the terms of the GNU General Public License as published by the
-## Free Software Foundation, either version 3 of the License, or (at your
-## option) any later version.
+## gnuastro is free software: you can redistribute it and/or modify it
+## under the terms of the GNU General Public License as published by
+## the Free Software Foundation, either version 3 of the License, or
+## (at your option) any later version.
 ##
-## AstrUtils is distributed in the hope that it will be useful, but
+## gnuastro is distributed in the hope that it will be useful, but
 ## WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 ## General Public License for more details.
 ##
 ## You should have received a copy of the GNU General Public License
-## along with AstrUtils. If not, see <http://www.gnu.org/licenses/>.
+## along with gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
 
 
@@ -39,12 +36,12 @@ AM_LDFLAGS = -lcfitsio -lwcs -pthread -lm -L$(top_builddir)/lib
 
 
 ## ImageCrop:
-bin_PROGRAMS = astrimgcrop
+bin_PROGRAMS = astimgcrop
 
-astrimgcrop_SOURCES = main.c main.h ui.c ui.h args.h imgcrop.c	\
+astimgcrop_SOURCES = main.c main.h ui.c ui.h args.h imgcrop.c	\
 imgcrop.h wcsmode.c wcsmode.h crop.c crop.h cite.h
 
-astrimgcrop_LDADD = -lconfigfiles -lfitsarrayvv -ltxtarrayvv	\
+astimgcrop_LDADD = -lconfigfiles -lfitsarrayvv -ltxtarrayvv	\
 -lcheckset -llinkedlist -ltiming -lastrthreads -lbox
 
 
@@ -52,14 +49,14 @@ astrimgcrop_LDADD = -lconfigfiles -lfitsarrayvv -ltxtarrayvv	\
 
 
 # To destribute the defaults file.
-dist_sysconf_DATA = astrimgcrop.conf
+dist_sysconf_DATA = astimgcrop.conf
 
 
 
 
 
 ## Generally for the man pages:
-dist_man_MANS = astrimgcrop.1
+dist_man_MANS = astimgcrop.1
 
-astrimgcrop.1: args.h $(top_srcdir)/include/commonargs.h
-	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astrimgcrop
+astimgcrop.1: args.h $(top_srcdir)/include/commonargs.h
+	-$(HELP2MAN) --output=$@ --source="$(PACKAGE_STRING)" ./astimgcrop
