--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,15 +1,24 @@
-## Process this file with automake to produce Makefile.in
+## Process this file with automake to produce Makefile.inx
 ##
-## Hand written file: used as input into Autotools.
+## This is part of GNU Astronomy Utilities (gnuastro). It will be
+## called by the Makefile.am in the top directory.
 ##
-## NOTE:
-## This file will be called by the Makefile.am in the top directory,
-## so this file does not need to be called directly by automake to
-## make the full GNU Astronomy Utilities (Astrutils)
-##
-## Copyright (C) 2013-2014 Mohammad Akhlaghi
+## Copyright (C) 2013-2015 Mohammad Akhlaghi
 ## Tohoku University Astronomical Institute, Sendai, Japan.
 ## http://astr.tohoku.ac.jp/~akhlaghi/
+##
+## gnuastro is free software: you can redistribute it and/or modify it
+## under the terms of the GNU General Public License as published by the
+## Free Software Foundation, either version 3 of the License, or (at your
+## option) any later version.
+##
+## gnuastro is distributed in the hope that it will be useful, but
+## WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+## General Public License for more details.
+##
+## You should have received a copy of the GNU General Public License
+## along with gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
 AM_TESTS_ENVIRONMENT = export topsrc=$(top_srcdir);
 
@@ -21,4 +30,4 @@ imgcrop/section.sh imgcrop/radec.sh
 EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt mkprof/mkprofcat2.txt	\
 mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt imgcrop/cat.txt
 
-CLEANFILES = *.log *.fits .astrutils/*.conf .astrutils
+CLEANFILES = *.log *.fits .gnuastro/*.conf .gnuastro
