ConvertType input color channels are done
Reading of the input color channels to ConvertType is now
complete. Work on the outputs will start form now on.

--- a/src/convertt/Makefile.am
+++ b/src/convertt/Makefile.am
@@ -29,7 +29,7 @@ AM_CFLAGS = -Wall -Ofast
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)/\" -I$(top_srcdir)/include
 
-AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
+AM_LDFLAGS = -lcfitsio -lwcs -lm -ljpeg -L$(top_builddir)/lib
 
 
 
