--- a/src/convertt/astconvertt.conf
+++ b/src/convertt/astconvertt.conf
@@ -19,9 +19,12 @@
 
 # Input:
  hdu                  0
+ h2                   0
+ h3                   0
+ h4                   0
 
 # Output:
- output               output.jpg
+ output               .jpg
  quality              100
  kincmyk              0
  widthincm            5.0
