--- a/src/convertt/astconvertt.conf
+++ b/src/convertt/astconvertt.conf
@@ -19,14 +19,13 @@
 
 # Input:
  hdu                  0
- h2                   0
- h3                   0
- h4                   0
+ hdu2                 0
+ hdu3                 0
+ hdu4                 0
 
 # Output:
  output               .jpg
  quality              100
- kincmyk              0
  widthincm            5.0
 
 # Flux:
