--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -27,9 +27,10 @@ mkprof/mosaic3.sh mkprof/mosaic4.sh imgcrop/imgcat.sh			\
 imgcrop/wcscat.sh imgcrop/xcyc.sh imgcrop/xcycnoblank.sh		\
 imgcrop/section.sh imgcrop/radec.sh convertt/fitstotxt.sh		\
 convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh	\
-convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh
+convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh			\
+convertt/fitstopdf.sh
 
 EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt mkprof/mkprofcat2.txt	\
 mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt imgcrop/cat.txt
 
-CLEANFILES = *.log *.txt *.jpg *.fits .gnuastro/*.conf .gnuastro
+CLEANFILES = *.log *.txt *.jpg *.fits *.pdf .gnuastro/*.conf .gnuastro
