Installation problems fixed
When checking for CFITSIO, the dependencies were not included, so on
some operating systems the installation would fail. This issue is
fixed now.

All the libraries are now created using convenience libraires with
Libtool (instead of the simple static libraries of before).

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@
 #
 
 *~
+*.la
+*.lo
 *.in
 *.log
 *.trs
+*.eps
 *.pdf
 *.jpg
 *.txt
@@ -15,6 +18,7 @@
 *.tar.gz
 Makefile
 
+m4
 astmkprof
 astimgcrop
 astconvertt
@@ -25,18 +29,22 @@ missing
 compile
 depcomp
 INSTALL
+libtool
 config.h
 stamp-h1
+ltmain.sh
 .dirstamp
 configure
+.gnuastro
+config.sub
 runtest.sh
 install-sh
 aclocal.m4
-.gnuastro
 test-driver
 config.h.in
 doc/mdate-sh
 gnuastro.t2p
+config.guess
 config.status
 doc/stamp-vti
 autom4te.cache
