--- a/src/mkprof/Makefile.am
+++ b/src/mkprof/Makefile.am
@@ -23,12 +23,9 @@
 
 # Flags:
 AM_CFLAGS = -Wall -Ofast
-
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)/\" -I$(top_srcdir)/include
-
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -pthread -lm	\
--L$(top_builddir)/lib
-
+             -L$(top_builddir)/lib
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)/\" -I$(top_srcdir)/include
 
 
 
@@ -38,9 +35,8 @@ bin_PROGRAMS = astmkprof
 astmkprof_SOURCES = main.c main.h ui.c ui.h mkprof.c mkprof.h args.h	\
 oneprofile.c oneprofile.h profiles.c profiles.h cite.h
 
-astmkprof_LDADD = -lconfigfiles -lfitsarrayvv -ltxtarrayvv		\
--lcheckset -llinkedlist -ltiming -lastrthreads -lbox -lstatistics	\
--larraymanip
+astmkprof_LDADD = -lconfigfiles -lfitsarrayvv -ltxtarrayvv -lcheckset	\
+-llinkedlist -ltiming -lastrthreads -lbox -lstatistics -larraymanip
 
 
 
