String literals instead of char *, system check
Before this, when ever a string literal was needed and the value could
be represented by a char * variable, the latter was used. To make sure
thereq might be no potential problem, all such cases were changed to a
"%s" and the name of the variable. It appears this could have been a
security problem.

Also all the calls to the `system` function where checked to see if it
really returned zero, if not the program will abort and report it.

In the manual two of the long sections in Introduction where moved to
the developing part.

--- a/src/mkprof/Makefile.am
+++ b/src/mkprof/Makefile.am
@@ -22,7 +22,7 @@
 
 
 # Flags:
-AM_CFLAGS = -Wall -Ofast
+AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -pthread -lm	\
              -L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)/\" -I$(top_srcdir)/include
