--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -20,12 +20,8 @@
 ## You should have received a copy of the GNU General Public License
 ## along with gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
-
-
-
-
 # Flags:
-AM_CFLAGS = -Wall -Ofast
+AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -pthread -lm -L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)/\" -I$(top_srcdir)/include
 
