--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -22,8 +22,10 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-AM_LDFLAGS = -lcfitsio -lwcs -pthread -lm -L$(top_builddir)/lib
-AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)/\" -I$(top_srcdir)/include
+LDADD = gnulib/lib/libgnu.a
+AM_LDFLAGS = -lcfitsio -lwcs $(LIB_PTHREAD) -lm -L$(top_builddir)/lib
+AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
+-I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
 
 
 
